<resources>
    <string name="app_name">Movies</string>
    <string name="movie_name">Movie Name</string>
    <string name="rate">Rate</string>
    <string name="date">Date</string>
    <string name="tagline">Tag line</string>
    <string name="movie_info">Movie Info: </string>
    <string name="released_date">Released date: </string>
    <string name="released_date1">Released date</string>
    <string name="rating">Rating: </string>
    <string name="eight">8</string>
    <string name="runtime">Runtime: </string>
    <string name="hr">2.3 hr</string>
    <string name="budget">Budget: </string>
    <string name="number">130,000</string>
    <string name="revenue">Revenue: </string>
    <string name="overview">Overview: </string>
    <string name="overview_text">overview .........</string>

</resources>