<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailesMovieActivity"
    android:background="@drawable/bg_main">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/imgLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/imgBackground"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:alpha="0.1"
            android:scaleType="centerCrop"
            android:src="@drawable/poster_placeholder"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/imgMovie"
            android:layout_width="200dp"
            android:layout_height="300dp"
            android:layout_gravity="center"
            android:background="@color/white"
            android:scaleType="centerCrop"
            android:src="@drawable/poster_placeholder"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="@+id/imgBackground"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.32"
            app:shapeAppearanceOverlay="@style/RoundedImageView" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="-30dp"
        android:background="@drawable/bg_detailes"
        android:alpha="0.9"
        android:padding="15dp"
        app:layout_constraintTop_toBottomOf="@id/imgLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.482"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tvMovieName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/cinzel_bold"
                    android:text="@string/movie_name"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvTagLine"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nanum_regular"
                    android:text="@string/tagline"
                    android:textColor="@color/sandy"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvMovieName" />

                <TextView
                    android:id="@+id/tvMovieInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/nanum_bold"
                    android:text="@string/movie_info"
                    android:textColor="@color/white"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvTagLine" />

                <TextView
                    android:id="@+id/dateReleasedTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/nanum_bold"
                    android:text="@string/released_date"
                    android:textColor="@color/sandy"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvMovieInfo" />

                <TextView
                    android:id="@+id/dateReleased"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nanum_regular"
                    android:text="@string/released_date1"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintBaseline_toBaselineOf="@+id/dateReleasedTitle"
                    app:layout_constraintStart_toEndOf="@id/dateReleasedTitle" />

                <TextView
                    android:id="@+id/tvMovieRatingTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nanum_bold"
                    android:text="@string/rating"
                    android:textColor="@color/sandy"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/dateReleasedTitle" />

                <TextView
                    android:id="@+id/tvMovieRating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:fontFamily="@font/nanum_regular"
                    android:text="@string/eight"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    app:layout_constraintBaseline_toBaselineOf="@+id/tvMovieRatingTitle"
                    app:layout_constraintStart_toEndOf="@+id/tvMovieRatingTitle" />

                <TextView
                    android:id="@+id/tvMovieRuntimeTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nanum_bold"
                    android:text="@string/runtime"
                    android:textColor="@color/sandy"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvMovieRatingTitle" />

                <TextView
                    android:id="@+id/tvMovieRuntime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nanum_regular"
                    android:text="@string/hr"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    app:layout_constraintBaseline_toBaselineOf="@+id/tvMovieRuntimeTitle"
                    app:layout_constraintStart_toEndOf="@+id/tvMovieRuntimeTitle" />

                <TextView
                    android:id="@+id/tvMovieBudgetTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nanum_bold"
                    android:text="@string/budget"
                    android:textColor="@color/sandy"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvMovieRuntimeTitle" />

                <TextView
                    android:id="@+id/tvMovieBudget"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:fontFamily="@font/nanum_regular"
                    android:text="@string/number"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    app:layout_constraintBaseline_toBaselineOf="@+id/tvMovieBudgetTitle"
                    app:layout_constraintStart_toEndOf="@+id/tvMovieBudgetTitle" />

                <TextView
                    android:id="@+id/tvMovieRevenueTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nanum_bold"
                    android:text="@string/revenue"
                    android:textColor="@color/sandy"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvMovieBudgetTitle" />

                <TextView
                    android:id="@+id/tvMovieRevenue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:fontFamily="@font/nanum_regular"
                    android:text="@string/number"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    app:layout_constraintBaseline_toBaselineOf="@+id/tvMovieRevenueTitle"
                    app:layout_constraintStart_toEndOf="@+id/tvMovieRevenueTitle" />

                <TextView
                    android:id="@+id/tvMovieOverviewTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/nanum_bold"
                    android:text="@string/overview"
                    android:textColor="@color/sandy"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvMovieRevenueTitle" />

                <TextView
                    android:id="@+id/tvMovieOverview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:fontFamily="@font/nanum_regular"
                    android:text="@string/overview_text"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvMovieOverviewTitle" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>