<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/dataRoot"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/bg_row"
        android:alpha="0.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guildLine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="150dp"/>
        
        <TextView
            android:id="@+id/tvMovieName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:text="@string/movie_name"
            android:fontFamily="@font/cinzel_bold"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/guildLine"
            app:layout_constraintTop_toTopOf="parent"/>

        <ImageView
            android:id="@+id/imgRate"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/round_star_24"
            app:layout_constraintStart_toStartOf="@id/guildLine"
            app:layout_constraintTop_toBottomOf="@id/tvMovieName"/>

        <TextView
            android:id="@+id/textRate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rate"
            android:textColor="@color/white"
            android:fontFamily="@font/nanum_regular"
            android:textSize="10sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/imgRate"
            app:layout_constraintBottom_toBottomOf="@id/imgRate"
            app:layout_constraintTop_toTopOf="@id/imgRate"/>


        <ImageView
            android:id="@+id/imgDate"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/baseline_date_range_24"
            app:layout_constraintStart_toStartOf="@id/guildLine"
            app:layout_constraintTop_toBottomOf="@id/imgRate"/>

        <TextView
            android:id="@+id/dateReleased"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textColor="@color/white"
            android:fontFamily="@font/nanum_regular"
            android:textSize="10sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/imgDate"
            app:layout_constraintBottom_toBottomOf="@id/imgDate"
            app:layout_constraintTop_toTopOf="@id/imgDate"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
    
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/imageRoot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/dataRoot"
        app:layout_constraintBottom_toBottomOf="@id/dataRoot"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="20dp">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/imgMovie"
            android:layout_width="115dp"
            android:layout_height="160dp"
            android:scaleType="fitXY"
            android:background="@color/white"
            app:shapeAppearanceOverlay="@style/RoundedImageView"
            app:srcCompat="@drawable/poster_placeholder"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>